# NJUST-Machine-Learning

./: README.md
Project1/: README.md
Project1/C++/: CMakeLists.txt  README.md  project1Func.hpp  project1Main.cpp  requirements.txt
Project1/Matlab/: Project1.m  README.md  costFunction.m  featureNormalize.m  gradientDescent.m  normalEqn.m  plotData.m  randInitializeTheta.m  reFeature.m  requirements.txt
Project1/Python/: README.md  project1.ipynb  project1func.py  requirements.txt
